--- a/Analyses article V4.Rmd
+++ b/Analyses article V4.Rmd
@@ -1654,10 +1654,12 @@ res_chi_cardiac <- chisq.test(data_chi)
 
 ```
 
-Relapse was defined for not epileptic patients as a new consultation in the ED or a written trace of a new event in a medical report of any specialities for similar motives as the ones of the first event. Regarding epileptic patients, only epileptic seizures were taken into account. Among all patients, `r N_relapses_total` (`r pct.fun(N_relapses_total, nrow(data_full_cleaned))`) relapsed. The proportion is significantly higher for epileptic patients (N = `r N_relapses_epi`/`r nrow(data_full_cleaned%>%filter(dx.event == "Epilepsy"))`; `r pct_relapses_epi`), compared to non epileptic patients (N = `r N_relapses_non_epi`/`r N_non_epi`; `r pct_relapses_non_epi`; `r report_results(result_chi_epi_non_epi, method = "chisq")`). Among epileptic patients, focal epilepsy patients (N = `r N_relapses_focal`/`r N_focal`; `r pct_relapses_focal`) tend to relapse more than generalized epilepsy patients (N = `r N_relapses_generalized`/`r N_generalized`; `r pct_relapses_generalized`), however, this difference did not reached significance (`r report_results(res_chi_focal_gen, method = "chisq")`). Inside the focal epilepsy group, patient with non lesional epilepsy (N = `r N_relapses_non_les`/`r N_non_les` ; `r pct_relapses_non_les`) are significantly most prone to relapse compared to lesional patients (N = `r N_relapses_les`/`r N_les`; `r pct_relapses_les`; `r report_results(res_chi_les_non_les, method = "chisq")`).
+Relapse was defined for not epileptic patients as a new consultation in the ED or a written trace of a new event in a medical report of any specialities for similar motives as the ones of the first event. Regarding epileptic patients, only epileptic seizures were taken into account. Among all patients, `r N_relapses_total` (`r pct.fun(N_relapses_total, nrow(data_full_cleaned))`) relapsed. The proportion is significantly higher for epileptic patients (N = `r N_relapses_epi`/`r nrow(data_full_cleaned%>%filter(dx.event == "Epilepsy"))`; `r pct_relapses_epi`), compared to non epileptic patients (N = `r N_relapses_non_epi`/`r N_non_epi`; `r pct_relapses_non_epi`; `r report_results(result_chi_epi_non_epi, method = "chisq")`). Among epileptic patients, focal epilepsy patients (N = `r N_relapses_focal`/`r N_focal`; `r pct_relapses_focal`) tend to relapse more than generalized epilepsy patients (N = `r N_relapses_generalized`/`r N_generalized`; `r pct_relapses_generalized`), however, this difference did not reach significance (`r report_results(res_chi_focal_gen, method = "chisq")`). Inside the focal epilepsy group, patient with non lesional epilepsy (N = `r N_relapses_non_les`/`r N_non_les` ; `r pct_relapses_non_les`) are significantly most prone to relapse compared to lesional patients (N = `r N_relapses_les`/`r N_les`; `r pct_relapses_les`; `r report_results(res_chi_les_non_les, method = "chisq")`).
 Regarding the non-epileptic groups, cardiac patients has the highest relapse rate compared to the other non-epileptic groups (N = `r N_relapses_cardiac`/`r N_cardiac`; `r pct_relapses_cardiac`), however, this difference did not reach significance either (`r report_results(res_chi_cardiac, "chisq")`). See Table X for a complete description of the relapse rate per diagnosis.
 
 `r kable(relapse_table)`
+
+*Table X: detailed description of the relapses experienced groupped by diagnosis.*
 
 ```{r relapses II}
 # Table of the reason of relapse among the epileptic patients
@@ -1682,7 +1684,7 @@ sevr_ttt <- 2
 
 ```
 
-Among epileptic patients, we investigated the origin of the first relapse following the first seizure (or the index event in case of non-investigated anterior seizures). As shown in Table X, Results indicate that most commonly, patients relapsed despite an adequate treatment and no compliance problems were reported (N = `r type_relapse_table$N[type_relapse_table ==  "Adequate treatment and good compliance"]`/`r N_epi`; `r type_relapse_table$PCT[type_relapse_table == "Adequate treatment and good compliance"]`). Nevertheless, a non negligeable part of the patients seem to relapse during the interval a treatment was instaurated, or refused the prescription of an antiepileptic drug (N = `r type_relapse_table$N[type_relapse_table == "No treatment"]`/`r N_epi`; `r type_relapse_table$PCT[type_relapse_table == "No treatment"]`). This stresses again the importance to investigate these patients as swiftly as possible. Interestingly, `r number_to_word(type_relapse_table$N[type_relapse_table == "Acute symptomatic seizure"])` patients first presented a non-provoked seizure leading to the diagnosis of epilepsy and and a second one considered as an acute symptomatic seizure. This is particularly the case for patients with alcohool addiction problems (`r OH`/`r N_acute`) and drugs withdrawal, such as benzodiazepines (`r sevr_ttt`/`r N_acute`).
+Among epileptic patients, we investigated the origin of the first relapse following the first seizure (or the index event in case of non-investigated anterior seizures). As shown in Table X, Results indicate that most commonly, patients relapsed despite an adequate treatment and no compliance problems were reported (N = `r type_relapse_table$N[type_relapse_table ==  "Adequate treatment and good compliance"]`/`r N_epi`; `r type_relapse_table$PCT[type_relapse_table == "Adequate treatment and good compliance"]`%). Nevertheless, a non negligeable part of the patients seem to relapse during the interval a treatment was instaurated, or refused the prescription of an antiepileptic drug (N = `r type_relapse_table$N[type_relapse_table == "No treatment"]`/`r N_epi`; `r type_relapse_table$PCT[type_relapse_table == "No treatment"]`%). This stresses again the importance to investigate these patients as swiftly as possible. Interestingly, `r number_to_word(type_relapse_table$N[type_relapse_table == "Acute symptomatic seizure"])` patients first presented a non-provoked seizure leading to the diagnosis of epilepsy and and a second one considered as an acute symptomatic seizure. This is particularly the case for patients with alcohool addiction problems (`r OH`/`r N_acute`) and drugs withdrawal, such as benzodiazepines (`r sevr_ttt`/`r N_acute`).
 
 `r kable(type_relapse_table)`
 
@@ -1736,6 +1738,8 @@ res_reg_log <- res_reg_log%>%
 To determine how much each clinical and paraclinical information contribute to the elaboration of the diagnosis, a logistic regression was performed, including as dependent variable the diagnosis (epileptic/not epileptic), and as predictors the patient's age, its gender, the familial history, results of the standard EEG (spikes/slow/spikes and slow/ normal), the presence of an epileptogenic lesion (normal/uncertain/epileptogenic lesion/non-epileptogenic lesion), the results or the neuro status (normal/abnormal), and if the event happened during wake or sleep. Results (see Table X) show that the presence of an epileptogenic lesion and the results of the EEG predict the best the diagnosis. All factor seem to play a role, except for the results of the status neuro and the familial history for which no main effect were highlighted.
 
 `r kable(res_reg_log)`
+
+*Table X: results table of the logistic regression model investigating the effect of each variable on the ability to predict the diagnosis. Factors are arranged by deviance.*
 
 ### Estimation of the yield of LT-EEG over stndard EEG
 
@@ -1793,4 +1797,23 @@ res_reg_log_LT <- res_reg_log_LT%>%
 A second logistic regression model aimed at assessing the relevance of the overnight EEG. For this analysis, only patients with a standard and LT-EEG were retained (N = `r nrow(data_LT_over_std)`). The same predictors as the previous model were enterd, adding the LT-EEG information (spikes/slow/spikes and slow/ normal). As shown in Table X, in this particular pool of patients LT-EEG appeard to be the main predictor of the diagnosis, much better than the presence of an epileptogenic lesion. Moreover, only these two parameters appeard to be significantly contributing to the patients diagnosis prediction.
 
 `r kable(res_reg_log_LT)`
+
+*Table X: results of the logistic regression model including the LT-EEG information as predictor of the diagnosis. Factors are arranged by deviance.*
+
+# Main messages: 
+
+- Patients admitted in the ED for a suspicion of epileptic seizure often don't have epileptic seizure.
+- Among the pathologies that mimmick epilepsy, the majority are very diversed, but cardiovascular events, PNES and vaso-vagal syncopes represent 55% of the cases. The other are less strongly characterized.
+- Lesional epilepsy is the most common etiology, and these patients are older than the non-lesional as well as the IGE patients.
+- EEG showed epileptiform abnormalities in 26% of the cases. In 43% of the cases, unspecific abnormalities were reported, and 31% of the EEG of epileptic patients remained totally normal.
+- The results do not suggest that the delay between the first seizure and the realization of the EEG plays a role in the detection of epileptiform abnormalities.
+- LT-EEG increases the chances to see epileptiform abnormalities since 50% of the patients with a normal standard EEG and who were finally diagnosed with epilepsy showed epileptiform abnormalities on the LT-EEG. Moreover, in difficult patients (i.e. who do not show epileptiform abnormalities on the standard EEG or the semiology is not suggestive), a LT-EEG was proposed. Results show that for these patients, the LT-EEG was the best predictor of the diagnosis, even above the presence of an epileptogenic lesion, shown as the best predictor by the previous model. These results confirm its interest in the diagnosis of epileptic patients.
+- Still 10% of the patients were diagnosed with epilepsy despite all normal exams.
+- As shown previously, MRI shows a yield compared to CT.
+- Non-epileptic patients seem to recieve their fianl diagnosis later than epileptic patients. Since the delay between the first event and the diagnosis tends to play a role on the relapses a patient might experience, this finding seems very important, especially for cardiac and cardiovascular patients who relapse the most after the first event. This stresses the importance of having a cardiologist in the emergency workup team of first seizure clinic.
+-Mortality is increased at 2 years for epileptic compared to non-epileptic patients.
+- Epileptic patients tend to relapse more than non-epileptic patients
+- Among epileptic patients, the non-lesional epilepsies tend to relapse more than the lesional epilepsy and IGE groups.
+- Among epileptic patients, almost half of the patients who relapsed were properly treated, but arround 26% of the patients either refused the treatment or were not properly followed.Arround 17% of the patients encounterd compliance problems.
+- Variables that contribute the most to the diagnosis were the presence of an epileptogenic lesion (due to the large number of lesional epilepsies and the low sensitivity of the EEG), then the EEG is the second better predictive factor. Other elements such as the gender, if the event occured during the night or the dayor the age of the patient contributed to the diagnosis. Other information such as the status neuro or a positive family history did not.
 
